@@ -439,6 +439,7 @@
   <string><id>508</id><value>Do not use Shortcuts or Scan</value></string>
   <string><id>509</id><value>Cache Program Thumbnails</value></string>
   <string><id>510</id><value>Enable Visualisations</value></string>
+  <string><id>511</id><value>Auto switch video mode based on game region</value></string>
   <string><id>600</id><value>Rip CD Audio</value></string>
   <string><id>601</id><value>Medium</value></string>
   <string><id>602</id><value>Standard</value></string>
